2001-12-04  Federico Mena Quintero  <federico@ximian.com>

	* sawfish/wm/viewport.jl (set-viewport): Grab the server while we
	move the windows.

2001-12-02  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/wm-spec.jl: check that some values are
	symbolp before calling get on them. Patch from Michal
	Politowski <mpol@charybda.icm.edu.pl> via Christian Marillat
	<marillat.christian@wanadoo.fr>

2001-10-27  John Harper  <jsh@unfactored.org>

	Fixed the bug where `transients-above' and `layer' stacking
	constraints can conflict and stop stacking working (gnome
	bugzilla 48412):

	* sawfish/wm/stacking.jl
	(stacking-constraint:transients-above-parent,
	stacking-constraint:transients-above-all): check the depth of
	the windows being compared. Depth overrides the transient-of
	stacking relation

	(stacking-add-window): transient windows get the depth of their
	highest parent window instead of the default of zero

2001-10-14  John Harper  <jsh@unfactored.org>

	* version 1.0.1

2001-09-20  John Harper  <jsh@unfactored.org>

	* sawfish/wm/workspace.jl (select-workspace): fixed bug in last
	change, don't keep the server grabbed for so long

2001-09-19  John Harper  <jsh@unfactored.org>

	Fixed bug of window flicker when switching workspaces:

	* sawfish/wm/workspace.jl (select-workspace): don't remove all
	windows not in the new space, then add all windows in the new
	space. Instead add all windows in the new space in
	top-to-bottom order, then remove unneeded windows
	bottom-to-top. This always generates the minimum exposed area

2001-09-17  John Harper  <jsh@unfactored.org>

	* sawfish/wm/commands.jl (apply-command-keys): fixed type of
	'dommand-doc instead of 'command-doc. Spotted by David Bustos
	<bustos@its.caltech.edu>

2001-09-14  John Harper  <jsh@pixelslut.com>

	* sawfish/wm.jl: when possible, disable error reporting on
	stdio streams

2001-09-13  John Harper  <jsh@pixelslut.com>

	Fixed bug of nautilus desktop window covering panel:
